--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -109,7 +109,7 @@
        "\"\\n\\nAda = Agent(map1, COSTS, [0,0], [12,15])\\ng_node = uniform_cost_search(Ada)\\n\\nprint(g_node.state)\\n\\np = g_node.path()\\n\\nmoves = {'01':'⏩','0-1':'⏪','-10':'⏫', '10':'⏬'}\\n\\nmap_copy = map1.copy()\\n\\n\\nfor i in range(len(p)-1):\\n\\n    ac = p[i]\\n    n = p[i+1]\\n\\n    map_copy[ac.state[0], ac.state[1]] = moves[str(n.action[0])+str(n.action[1])]\\n\\n\\nfor i in range(map_copy.shape[0]):\\n    print(map_copy[i,:])\\n\\n\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,12 @@
     "        if node.state == agent.goal_state:\n",
     "            return node.path()\n",
     "        explored.append(node.state)\n",
-    "\n",
+    "        print(\"\\nNode: \",node)\n",
+    "        print(\"\\ninitial_state\",agent.initial_state)\n",
+    "        print(\"\\nCosto: \",agent.costs)\n",
+    "        print(\"\\ncurrent_state: \",node.state)\n",
+    "        print(\"\\ngoal_state\",agent.goal_state)\n",
+    "        agent.current_state=node.state\n",
     "        for child in node.successors(agent):\n",
     "            if child.state not in explored and child not in frontier:\n",
     "                frontier.append(child)\n",
@@ -333,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +346,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DDB58B0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4DDC03D0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -351,7 +356,17 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DE21A30>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5700>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [0, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5FD0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -361,7 +376,57 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DE218E0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5790>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [0, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5A60>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [0, 0]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5880>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5910>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA59D0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [0, 0]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5A00>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -371,363 +436,123 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DE214C0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5B50>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [1, 0]\n",
+      "current_state:  [1, 2]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244EB0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5AF0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 0]\n",
+      "current_state:  [1, 2]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244B50>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5DF0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [1, 0]\n",
+      "current_state:  [2, 1]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244FA0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5580>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 0]\n",
+      "current_state:  [1, 2]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244AF0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5AC0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [1, 0]\n",
+      "current_state:  [2, 1]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244F40>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5A90>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 0]\n",
+      "current_state:  [2, 1]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244A60>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5970>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [1, 0]\n",
+      "current_state:  [2, 2]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244EE0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA59D0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 0]\n",
+      "current_state:  [2, 2]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265670>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5520>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [1, 0]\n",
+      "current_state:  [2, 2]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265FD0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5E80>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 0]\n",
+      "current_state:  [2, 2]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265790>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5100>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [1, 0]\n",
+      "current_state:  [2, 2]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265880>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5040>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F2655B0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265E80>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265430>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F2652B0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265310>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F2651C0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F2650D0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265040>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F2659D0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265C10>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265CD0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265DF0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26D0A0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26D1C0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26D280>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26D3A0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26D460>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26D580>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26D640>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26D760>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26D820>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26D940>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26DA00>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F26DB20>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
+      "current_state:  [2, 2]\n",
       "\n",
       "goal_state (2, 2)\n"
      ]
@@ -756,7 +581,7 @@
     "print(agent1.possible_moves())\n",
     "\"\"\"\n",
     "\n",
-    "path = depth_first_graph_search(agent1)\n"
+    "path = breadth_first_graph_search(agent1)\n"
    ]
   }
  ],
