--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -109,7 +109,7 @@
        "\"\\n\\nAda = Agent(map1, COSTS, [0,0], [12,15])\\ng_node = uniform_cost_search(Ada)\\n\\nprint(g_node.state)\\n\\np = g_node.path()\\n\\nmoves = {'01':'⏩','0-1':'⏪','-10':'⏫', '10':'⏬'}\\n\\nmap_copy = map1.copy()\\n\\n\\nfor i in range(len(p)-1):\\n\\n    ac = p[i]\\n    n = p[i+1]\\n\\n    map_copy[ac.state[0], ac.state[1]] = moves[str(n.action[0])+str(n.action[1])]\\n\\n\\nfor i in range(map_copy.shape[0]):\\n    print(map_copy[i,:])\\n\\n\""
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,12 @@
     "        node = frontier.pop(0)\n",
     "        if agent.goal_state == node.state:\n",
     "            return node.path()\n",
-    "\n",
+    "        print(\"\\nNode: \",node)\n",
+    "        print(\"\\ninitial_state\",agent.initial_state)\n",
+    "        print(\"\\nCosto: \",agent.costs)\n",
+    "        print(\"\\ncurrent_state: \",node.state)\n",
+    "        print(\"\\ngoal_state\",agent.goal_state)\n",
+    "        agent.current_state=node.state\n",
     "        if node.state not in explored:\n",
     "            explored.append(node.state)\n",
     "            children = node.successors(agent)\n",
@@ -338,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +351,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DDC03D0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265130>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -356,17 +361,7 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5700>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [0, 1]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5FD0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F2656D0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -376,27 +371,7 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5790>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [0, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5A60>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [0, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5880>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265B80>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -406,7 +381,57 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5910>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265FD0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F2659A0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4DDAF610>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5F70>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265FD0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5430>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -416,17 +441,17 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA59D0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA57F0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [0, 0]\n",
+      "current_state:  [2, 2]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5A00>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5CD0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -436,27 +461,17 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5B50>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5940>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [1, 2]\n",
+      "current_state:  [1, 0]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5AF0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5DF0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5460>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -466,7 +481,17 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5580>\n",
+      "Node:  <__main__.Node object at 0x000001DC4DDAF760>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [0, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA51F0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -476,7 +501,77 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5AC0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA57F0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [0, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5460>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265FD0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [0, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4DDAF610>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [0, 0]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA58E0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 0]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5E50>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [0, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265A00>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265610>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -486,73 +581,43 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5A90>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265460>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 1]\n",
+      "current_state:  [0, 1]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5970>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265550>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 2]\n",
+      "current_state:  [2, 0]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA59D0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F265370>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 2]\n",
+      "current_state:  [0, 0]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5520>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F2651F0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5E80>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5100>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5040>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 2]\n",
+      "current_state:  [0, 1]\n",
       "\n",
       "goal_state (2, 2)\n"
      ]
@@ -581,7 +646,7 @@
     "print(agent1.possible_moves())\n",
     "\"\"\"\n",
     "\n",
-    "path = breadth_first_graph_search(agent1)\n"
+    "path = uniform_cost_search(agent1)\n"
    ]
   }
  ],
