--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -109,7 +109,7 @@
        "\"\\n\\nAda = Agent(map1, COSTS, [0,0], [12,15])\\ng_node = uniform_cost_search(Ada)\\n\\nprint(g_node.state)\\n\\np = g_node.path()\\n\\nmoves = {'01':'⏩','0-1':'⏪','-10':'⏫', '10':'⏬'}\\n\\nmap_copy = map1.copy()\\n\\n\\nfor i in range(len(p)-1):\\n\\n    ac = p[i]\\n    n = p[i+1]\\n\\n    map_copy[ac.state[0], ac.state[1]] = moves[str(n.action[0])+str(n.action[1])]\\n\\n\\nfor i in range(map_copy.shape[0]):\\n    print(map_copy[i,:])\\n\\n\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,8 @@
     "        print(\"\\nCosto: \",agent.costs)\n",
     "        print(\"\\ncurrent_state: \",node.state)\n",
     "        print(\"\\ngoal_state\",agent.goal_state)\n",
-    "        agent.current_state=node.state\n",
+    "        agent.set_current_state(node.state)\n",
+    "        #agent.current_state=node.state\n",
     "        for child in node.successors(agent):\n",
     "            if child not in explored and child not in frontier:\n",
     "                frontier.append(child)\n",
@@ -247,7 +248,8 @@
     "        print(\"\\nCosto: \",agent.costs)\n",
     "        print(\"\\ncurrent_state: \",node.state)\n",
     "        print(\"\\ngoal_state\",agent.goal_state)\n",
-    "        agent.current_state=node.state\n",
+    "        #agent.current_state=node.state\n",
+    "        agent.set_current_state(node.state)\n",
     "        for child in node.successors(agent):\n",
     "            if child.state not in explored and child not in frontier:\n",
     "                frontier.append(child)\n",
@@ -343,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +353,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265130>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6B040>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -361,7 +363,17 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F2656D0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4DDAF0A0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [0, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4DDAF790>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -371,117 +383,7 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265B80>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 1]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265FD0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F2659A0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DDAF610>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5F70>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265FD0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 1]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5430>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 1]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA57F0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5CD0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5940>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5460>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 1]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DDAF760>\n",
+      "Node:  <__main__.Node object at 0x000001DC4DDC0760>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -491,47 +393,7 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA51F0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA57F0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [0, 1]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5460>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 1]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265FD0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [0, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DDAF610>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6B3A0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -541,27 +403,7 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA58E0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5E50>\n",
-      "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [0, 1]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265A00>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6B850>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -571,27 +413,27 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265610>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6BCD0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 1]\n",
+      "current_state:  [1, 1]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265460>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6BE20>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [0, 1]\n",
+      "current_state:  [0, 0]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265550>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6B1C0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
@@ -601,23 +443,123 @@
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F265370>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6B6A0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [0, 0]\n",
+      "current_state:  [1, 2]\n",
       "\n",
       "goal_state (2, 2)\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F2651F0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F120FD0>\n",
       "\n",
       "initial_state (0, 0)\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [0, 1]\n",
+      "current_state:  [1, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F14A670>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F14A640>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [1, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6B3A0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F14A6D0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 1]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4DCF45B0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4DCF41F0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4F14A5B0>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4DCF4430>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6BE20>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 2]\n",
+      "\n",
+      "goal_state (2, 2)\n",
+      "\n",
+      "Node:  <__main__.Node object at 0x000001DC4DCF4130>\n",
+      "\n",
+      "initial_state (0, 0)\n",
+      "\n",
+      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
+      "\n",
+      "current_state:  [2, 2]\n",
       "\n",
       "goal_state (2, 2)\n"
      ]
@@ -646,7 +588,7 @@
     "print(agent1.possible_moves())\n",
     "\"\"\"\n",
     "\n",
-    "path = uniform_cost_search(agent1)\n"
+    "path = breadth_first_graph_search(agent1)\n"
    ]
   }
  ],
