--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -353,215 +353,135 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6B040>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6B610>\n",
       "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  (0, 0)\n",
+      "current_state:  [0, 0]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DDAF0A0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6B520>\n",
       "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
       "current_state:  [0, 1]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DDAF790>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6B6D0>\n",
       "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
       "current_state:  [1, 0]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DDC0760>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6B700>\n",
       "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
       "current_state:  [0, 2]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6B3A0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6BA00>\n",
       "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [0, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6B850>\n",
-      "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
       "current_state:  [1, 1]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6BCD0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6BAF0>\n",
       "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
       "current_state:  [1, 1]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6BE20>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6BB20>\n",
       "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [0, 0]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6B1C0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
       "current_state:  [2, 0]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6B6A0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6BBB0>\n",
       "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F120FD0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
       "current_state:  [1, 2]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F14A670>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6BA60>\n",
       "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 1]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F14A640>\n",
-      "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
       "current_state:  [1, 2]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6B3A0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6B8E0>\n",
       "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 1]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F14A6D0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
       "current_state:  [2, 1]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DCF45B0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6BE80>\n",
       "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DCF41F0>\n",
-      "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 2]\n",
+      "current_state:  [1, 2]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F14A5B0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6BC10>\n",
       "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DCF4430>\n",
-      "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 2]\n",
+      "current_state:  [2, 1]\n",
       "\n",
-      "goal_state (2, 2)\n",
+      "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6BE20>\n",
+      "Node:  <__main__.Node object at 0x000001DC4FE6BDF0>\n",
       "\n",
-      "initial_state (0, 0)\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 2]\n",
-      "\n",
-      "goal_state (2, 2)\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4DCF4130>\n",
-      "\n",
-      "initial_state (0, 0)\n",
+      "initial_state [0, 0]\n",
       "\n",
       "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
       "\n",
-      "current_state:  [2, 2]\n",
+      "current_state:  [2, 1]\n",
       "\n",
-      "goal_state (2, 2)\n"
+      "goal_state [2, 2]\n"
      ]
     }
    ],
@@ -574,8 +494,8 @@
     "\n",
     "costs = {0: 10, 1: 1, 2: 5, 3:100}\n",
     "\n",
-    "initial_state = (0, 0)\n",
-    "goal_state = (2,2)\n",
+    "initial_state = [0, 0]\n",
+    "goal_state = [2,2]\n",
     "\n",
     "agent1 = Agent(world, costs, initial_state, goal_state)\n",
     "\n",
