--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -109,7 +109,7 @@
        "\"\\n\\nAda = Agent(map1, COSTS, [0,0], [12,15])\\ng_node = uniform_cost_search(Ada)\\n\\nprint(g_node.state)\\n\\np = g_node.path()\\n\\nmoves = {'01':'⏩','0-1':'⏪','-10':'⏫', '10':'⏬'}\\n\\nmap_copy = map1.copy()\\n\\n\\nfor i in range(len(p)-1):\\n\\n    ac = p[i]\\n    n = p[i+1]\\n\\n    map_copy[ac.state[0], ac.state[1]] = moves[str(n.action[0])+str(n.action[1])]\\n\\n\\nfor i in range(map_copy.shape[0]):\\n    print(map_copy[i,:])\\n\\n\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
     "        #agent.current_state=node.state\n",
     "        agent.set_current_state(node.state)\n",
     "        for child in node.successors(agent):\n",
-    "            if child.state not in explored and child not in frontier:\n",
+    "            if child.state not in explored and child.state not in [n.state for n in frontier]:\n",
     "                frontier.append(child)\n",
     "\n",
     "    return None\n",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6B610>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5850>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -363,7 +363,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6B520>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5B20>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -373,7 +373,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6B6D0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5040>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -383,7 +383,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6B700>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5490>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -393,7 +393,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6BA00>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5940>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -403,17 +403,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6BAF0>\n",
-      "\n",
-      "initial_state [0, 0]\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 1]\n",
-      "\n",
-      "goal_state [2, 2]\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6BB20>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244C40>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -423,7 +413,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6BBB0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244DF0>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -433,47 +423,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6BA60>\n",
-      "\n",
-      "initial_state [0, 0]\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 2]\n",
-      "\n",
-      "goal_state [2, 2]\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6B8E0>\n",
-      "\n",
-      "initial_state [0, 0]\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 1]\n",
-      "\n",
-      "goal_state [2, 2]\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6BE80>\n",
-      "\n",
-      "initial_state [0, 0]\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [1, 2]\n",
-      "\n",
-      "goal_state [2, 2]\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6BC10>\n",
-      "\n",
-      "initial_state [0, 0]\n",
-      "\n",
-      "Costo:  {0: 10, 1: 1, 2: 5, 3: 100}\n",
-      "\n",
-      "current_state:  [2, 1]\n",
-      "\n",
-      "goal_state [2, 2]\n",
-      "\n",
-      "Node:  <__main__.Node object at 0x000001DC4FE6BDF0>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244CA0>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
