add sucessors update

--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -109,7 +109,7 @@
        "\"\\n\\nAda = Agent(map1, COSTS, [0,0], [12,15])\\ng_node = uniform_cost_search(Ada)\\n\\nprint(g_node.state)\\n\\np = g_node.path()\\n\\nmoves = {'01':'⏩','0-1':'⏪','-10':'⏫', '10':'⏬'}\\n\\nmap_copy = map1.copy()\\n\\n\\nfor i in range(len(p)-1):\\n\\n    ac = p[i]\\n    n = p[i+1]\\n\\n    map_copy[ac.state[0], ac.state[1]] = moves[str(n.action[0])+str(n.action[1])]\\n\\n\\nfor i in range(map_copy.shape[0]):\\n    print(map_copy[i,:])\\n\\n\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
     "        children = []\n",
     "\n",
     "        for i in range(len(succ_states)):\n",
-    "\n",
+    "            agent.set_current_state(succ_states[i])\n",
     "            children.append(Node(succ_states[i], self, succ_actions[i], succ_costs[i]))\n",
     "        return  children\n",
     "\n",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5850>\n",
+      "Node:  <__main__.Node object at 0x000001DC4F244F70>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -363,7 +363,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5B20>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5790>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -373,7 +373,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5040>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA57C0>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -383,7 +383,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5490>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5040>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -393,7 +393,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC50AA5940>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5370>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -403,7 +403,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244C40>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5400>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -413,7 +413,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244DF0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA5E50>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
@@ -423,7 +423,7 @@
       "\n",
       "goal_state [2, 2]\n",
       "\n",
-      "Node:  <__main__.Node object at 0x000001DC4F244CA0>\n",
+      "Node:  <__main__.Node object at 0x000001DC50AA59A0>\n",
       "\n",
       "initial_state [0, 0]\n",
       "\n",
