--- a/AI-Ex2.ipynb
+++ b/AI-Ex2.ipynb
@@ -228,6 +228,53 @@
     "    return None\n",
     "\n",
     "\n",
+    "def depth_first_graph_search_2(agent):\n",
+    "    #TODO\n",
+    "    \"\"\"\n",
+    "    Search the deepest nodes in the search tree first.\n",
+    "    Search through the successors of a problem to find a goal.\n",
+    "    The argument frontier should be an empty queue.\n",
+    "    Does not get trapped by loops.\n",
+    "    If two paths reach a state, only use the first one.\n",
+    "    \"\"\"\n",
+    "    frontier = [(Node(agent.initial_state))]  # Stack\n",
+    "\n",
+    "    explored = []\n",
+    "    while frontier:\n",
+    "        print(\"stack:\",frontier)\n",
+    "        print(\"stack reversed\",list(reversed(frontier)))\n",
+    "        node=frontier.pop()    #while there's elements in the stack, pop top item and compare\n",
+    "        print(\"pop stack:\",frontier)\n",
+    "        agent.set_current_state(node.state)\n",
+    "        print(\"agent.current_state\",agent.current_state)\n",
+    "        print(\"node.state\",node.state)\n",
+    "        print(\"node.parent\",node.parent)\n",
+    "        print(\"node.depth\",node.depth)\n",
+    "        print(\"node.action\",node.action)\n",
+    "        print(\"node.path_cost\",node.path_cost)\n",
+    "        if node.state==agent.goal_state:\n",
+    "            return node\n",
+    "        if node not in explored:\n",
+    "            explored.append(node)\n",
+    "        print(\"explored\",explored)\n",
+    "        succesors=node.successors(agent)\n",
+    "        print(\"succesors\",succesors)\n",
+    "        for item in succesors:\n",
+    "            if item not in explored and item not in frontier:\n",
+    "                frontier.append(item)\n",
+    "        print(\"stack\",frontier)\n",
+    "        print(\"\\n\")\n",
+    "        if node.depth>15:\n",
+    "            break\n",
+    "\n",
+    "        \n",
+    "        # print(\"succ_states\",succ_states)\n",
+    "        # print(\"succ_actions\",succ_actions)\n",
+    "        # print(\"succ_costs\",succ_costs)\n",
+    "\n",
+    "    return None\n",
+    "\n",
+    "\n",
     "def breadth_first_graph_search(agent):\n",
     "    \"\"\"\n",
     "    Search through the successors of a problem to find a goal.\n",
@@ -464,7 +511,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "proba",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -478,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.10"
   },
   "toc": {
    "colors": {
@@ -506,7 +553,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "2dff9fdaf7b94c5adc137ae9efacb6eb17db3d464d727aaf2eb000ed4ad138c2"
+    "hash": "112ed91ee98a6989d9d7e71eb977853a7d8456dc33f96bdb50f97ad343938d3e"
    }
   }
  },
